themes/cp_theme_d10/css/page.css
/* ... */
/* News and Events */
.news-main-image, .teaser-news-image {
  width: 100%;
  overflow: hidden;
  border-radius: 0.625rem;

  img {
    object-fit: cover;
    object-position: center;
  }
}


.news-main-image {
  margin-bottom: 3rem;
  max-height: 616px;

  img {
    width: 100%;
    max-height: 616px;
  }
}

.teaser-news-image {
  margin-bottom: 1.25rem;
  border-radius: 0.4rem;
  max-height: 248px;
  aspect-ratio: 16/9;

  img {
    max-height: 248px;
  }
}

.teaser-fluxes-img {
  img {
    border-radius: 0.4rem;
  }
}

/* Admin - editing page */
.entity-node-edit-form .page-content,
.node-add .page-content {
  .description {
    .item-list .list-group-item {
      border-style: none;
      color: unset;
    }
  }

  .details-wrapper {
    &>strong {
      display: block;
    }
  }
}

.layout-builder-overrides-node-view.page .page-content {
  .main-content {
    padding: 1rem;
  }
}

/* Admin - fix for offcanvas text editor content */
#drupal-off-canvas {
  .text-muted {
    color: rgba(var(--bs-light-rgb), 0.8) !important;
  }
}

/* Larger than Bootstrap XXL breakpoint */
@media all and (min-width: 1400px) {
  .header {
    width: 100%;
    padding-left: calc((100% - 1400px)/2);
    padding-right: calc((100% - 1400px)/2);
  }
}

/* Smaller than Bootstrap XXL breakpoint */
@media all and (max-width: 1399.98px) {}

/* Smaller than Bootstrap XL breakpoint */
@media all and (max-width: 1199.98px) {
  .above-content img {
    height: 386px;
  }
}

/* Smaller than Bootstrap L breakpoint */
@media all and (max-width: 991.98px) {
  footer {
    padding-left: 3rem;
    padding-right: 3rem;

    #block-cp-theme-d10-footersecond {
      margin-top: 2rem;
    }

    .footer-bottom {
      margin-top: 3rem;

      .list-inline-item {
        display: block;
        margin-bottom: 1rem;
      }
    }
  }

  .cp-contacts .cp-contact {
    width: 48%;
    min-width: 250px;
  }

  .above-content img {
    height: 310px;
  }

  .layout--colored-flex .layout__region--left,
  .layout--colored-flex .layout__region--right,
  .layout--dark-blue-bot-left-two .layout__region--left,
  .layout--dark-blue-bot-left-two .layout__region--right {
    max-width: 100%;
  }
}

/* Smaller than Bootstrap M breakpoint */
@media all and (max-width: 767.98px) {
  footer {
    padding-left: 2rem;
    padding-right: 2rem;
  }
  .above-content img {
    height: 247px;
  }

  .cp-contacts .cp-contact {
    width: 100%;
  }

  .webform #page .page-content,
  .entity-webform-canonical #page .page-content {
    .webform-likert-table-wrapper {
      .webform-likert-table {
        .radio {
          display: block;
        }
        & > :not(caption) > * > *,
        tr {
          background-color: unset;
        }
        
      }
    }
    .table-hover > tbody > tr:hover > *,
    .table-hover > tbody > tr:focus-within > * {
      --bs-table-bg-state: unset;
    }
  }
}

/* Smaller than Bootstrap S breakpoint */
@media all and (max-width: 575.98px) {
  footer {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .above-content img {
    height: 186px;
  }

  #search-block-form {
    #edit-keys {
      display: none;
    }

    #edit-submit {
      border-radius: 100px;
    }
  }
}

